updated README.md to require java 11, and recommend a new java arg for watching our reflection on GSON